apps/gateway-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
spec:
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
        - image: registry.localhost/fabreteca/gateway-api
          name: gateway-api
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: app
