apps/gateway-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: app
      protocol: TCP
      name: app
  selector:
    app: gateway-api
